# Martins3.github.io

./: .editorconfig  .gitignore  .gitmodules  .ignore  .lintmdrc.json  .pre-commit-config.yaml  ByMyWill.md  Readme.md  all.md  benchmark-route.md  boring.md  bt-route.md  bug-report.md  computer-theory.md  crypto.md  ddf.md  debug.md  designer.md  distribution.md  firmware-route.md  happy.md  hc.md  hpc.md  interesting.md  jobs.md  k8s.md  martins3.md  math-route.md  microcode.md  ml-route.md  monitor.md  net.diff  nixos.sh  nn-route.md  privacy-computing.md  rsync  rsync.sh  search-route.md  search.md  security-route.md  (+5 more)
Algorithm/: Clgorithm.md  Graph.md  MISC.md  OJ with C.md  OJ with go.md  STL.md  String-With-Cpp.md  Superstition of OJ.md  advance-oj.md  algorithm_route.md  basic.md  dp.md  graph.md  greedy.md  math.md  misc.md
DuckBuBi/: env.md  plans.md
UCAS/: Academic_Morality.md  notes.md  paper-format.md
algorithm/: advance-oj.md  algorithm_route.md  c_algorithm.md  dp.md  graph.md  greedy.md  math.md  misc.md  oj_with_c.md  oj_with_go.md  stl.md  string-with-cpp.md  tree.md
bash/: a.sh  b.sh  bash-shit.md  bash-weird.md  bash.md  learn.nu  shellcheck.md
blog/: merge.md
bmbt/: la-kernel.md  plans.md
bt/: GenC.md  archC.md  archsim.md  captive.md  generator.md  gensim.md  overview.md
cg/: graph_route.md
checksheet/: Readme.md  acm.md  cmake.md  cpp.md  gdb.md  git.md  make.md
cloud/: backend.md  kubernete.md
collection/: Surviving-in-Linux.md
compiler/: compiler-route.md  iridium.md  lua.md  relro.md  wasm.md  wren.md
concurrent/: concurrent-route.md
corn/: notes.md  readme.md
db/: database_route.md
docs/: 2.md  CNAME  README.md  Readme.md  _config.yml  be-rich.md  blog.md  college.md  cool.md  dune.md  education.md  gcc.md  gfw.md  hn.md  iommu-amd.md  iommu-question.md  kernel-notes.md  learn-cs-details.md  learn-cs.md  learn-linux-kernel.md  learn-virtualization.md  learn-x-in-spare-time.md  learn.md  life-dev.md  lwn.md  mac.md  nix.md  paper-reading-list.md  ps.md  publication-skipped.md  publication-title-report.md  qemu-bios-memory.md  qemu-map.md  qemu-memory.md  qemu-softmmu-functions.md  ramooflax.md  rdma-setup.md  readme.draft.md  readme.md  setup-github-pages.md  (+12 more)
docs/ai/rust-teach-infer/: Cargo.toml  README.md
docs/ai/rust-teach-infer/crates/teach-core/: Cargo.toml
docs/ai/rust-teach-infer/crates/teach-core/src/: lib.rs
docs/ai/rust-teach-infer/crates/teach-cuda/: Cargo.toml
docs/ai/rust-teach-infer/crates/teach-cuda/src/: lib.rs
docs/ai/rust-teach-infer/crates/teach-engine/: Cargo.toml
docs/ai/rust-teach-infer/crates/teach-engine/src/: lib.rs
docs/ai/rust-teach-infer/crates/teach-infer/: Cargo.toml
docs/ai/rust-teach-infer/crates/teach-infer/src/: main.rs
docs/ai/rust-teach-infer/crates/teach-mode/: Cargo.toml
docs/ai/rust-teach-infer/crates/teach-mode/src/: lib.rs  metrics.rs  step.rs  trace.rs  visual.rs
docs/ai/rust-teach-infer/crates/teach-model/: Cargo.toml
docs/ai/rust-teach-infer/crates/teach-model/src/: lib.rs  loader.rs  qwen2_real.rs
docs/ai/rust-teach-infer/scripts/: generate_test_weights.py  with_cuda_env.sh
docs/blog/fsrs/: Cargo.toml  rust-toolchain.toml
docs/blog/fsrs/src/: main.rs
docs/rust/code/src/grpc/: Cargo.toml
docs/rust/code/src/grpc/src/: server.rs
docs/rust/code/src/pingora/: Cargo.toml
docs/rust/code/src/pingora/src/: main.rs
docs/windows/code/: CMakeLists.txt  README.md  win_echo_client.cpp  win_echo_server.cpp  win_echo_server_iocp.cpp  win_file_io_demo.cpp  win_heap_demo.cpp  win_lock_demo.cpp  win_process_demo.cpp
ds/: bitcoin.md  cap.md  ds-route.md  notes.md  raft.md
embedded/: arduino.md  esp.md  stm32.md
gpu/: gpu-route.md
graph/: graph_route.md
hack/: .gitignore  README.md  abi.md  acpi.md  arch-x86.md  asm.md  bios.md  block.md  boot.md  buildsystem.md  cgroup.md  compiler.md  control.md  data-structure.md  debug.md  device.md  driver.md  ds.md  eBPF.md  ebpf.md  firmware.md  fs.md  grub.md  includeos.md  init.md  int.md  kernel-patch.md  kvm.md  lock.md  memory.md  module.md  namespace.md  net.md  perf.md  process.md  qemu.md  syscall.md  time.md  trace.md  windows-route.md  (+1 more)
hpc/: hpc.md  sse.c  sse4.cpp
hust/: Fn Programming.md  ML.md
kernel/: design.md  devices.md  distribution.md  interrupt.md  kchecklist.md  kernel-route.md  process.md  question.md
language/: C.md  CPP.md  JS.md  Java Containers.md  Java.md  Python.md  Rust.md  Scala.md  awk.md  bash.md  c.md  chisel3.md  cmake.md  cpp-cleanup.md  cpp-core-guidelines.md  cpp-effective-modern.md  cpp-effective.md  cpp-features.md  cpp-modern-features.md  cpp-modern.md  cpp-notes.md  cpp-object-model.md  cpp-primer.md  cpp-template-metaprogramming.md  cpp-things.md  cpp.md  functional_programming.md  go.md  haskell.md  java-containers.md  java.md  js.md  lua.md  make.md  nim.md  oo.md  python.md  r.md  regex.md  rust.md  (+3 more)
net/: app.md  arp.md  bonding.md  bridge.md  eomaia.md  level-ip.md  net-route.md  net.md  nic-driver.md  ovs.md  perfermance.md  tc.md  tcp-ip.md  tools.md  tun-tap.md  unix.md
nonsense/: Surviving-in-Linux.md
os/: binutils.md  cross compiler.md  misc.md  os-route.md  os-tutorial.md  redox.md  rtos.md  thesuse.md  unikernel.md  zicron.md
papers/: a_retargetable_system_level_dbt_hypervisor.md  theseus_an_experiment_in_operating_system_structure_and_state_management.md
perf/: easyperf.md  perf-route.md
rdma/: overview.md
soft/: design-pattern.md  soft-route.md  sre.md  trace-debug-route.md
sys/: Bus.md  CSAPP-Lab-Six.md  See MIPS Run.md  ins.md  mem.md  openroad.md  sys-route.md  ulmBLAS.md
tech/: advanced-arch-notes.md  communication-between-two-terminal.md  (+10 more)
(+3789 files in other folders)
