[package]
name = "anki-fsrs"
version = "0.1.0"
edition = "2021"
authors = ["martins3 hubachelar@gmail.com>"]
description = "Anki-like spaced repetition system using FSRS"
license = "MIT"

[dependencies]
fsrs = "5.2.0"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.20", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.132"
