[package]
name = "teach-model"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]

[dependencies]
teach-core = { path = "../teach-core" }
serde.workspace = true
serde_json.workspace = true
hf-hub.workspace = true
tokenizers.workspace = true
candle-core.workspace = true
candle-nn.workspace = true
candle-transformers.workspace = true
safetensors = "0.5"
half = { version = "2.3", features = ["num-traits"] }
